[package]
name = "proxy-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-proxy = { version="0.9.1", features = ["default"]}
axum = "0.3.1"
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
hyper-tls = { version = "0.5.0" }

headers = "0.3"

# used
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.1", features = ["trace"] }
lazy_static = "1.4"
unicase = "2.6"